Adds support for rendering tables in Markdown content

--- a/static/data/A18828/A18828.md
+++ b/static/data/A18828/A18828.md
@@ -1,7 +1,7 @@
 | Attribute  | Description |
 | ------------- | ------------- |
-| pit_tag_id | A18828 |
-| acoustic_tag_id | OPI-378 |
-| scientific_name | Pollachius pollachius |
-| common_name | Pollock |
-| project | FISHINTEL |
+| Pit Tag Id | A18828 |
+| Acoustic Tag Id | OPI-378 |
+| Scientific Name | Pollachius pollachius |
+| Common Name | Pollock |
+| Project | FISHINTEL |
