--- a/static/data/A18832/A18832.md
+++ b/static/data/A18832/A18832.md
@@ -1,7 +1,7 @@
 | Attribute  | Description |
 | ------------- | ------------- |
-| pit_tag_id | A18832 |
-| acoustic_tag_id | OPI-511 |
-| scientific_name | Pollachius pollachius |
-| common_name | Pollock |
-| project | FISHINTEL |
+| Pit Tag Id | A18832 |
+| Acoustic Tag Id | OPI-511 |
+| Scientific Name | Pollachius pollachius |
+| Common Name | Pollock |
+| Project | FISHINTEL |
