--- a/static/data/A18831/A18831.md
+++ b/static/data/A18831/A18831.md
@@ -1,7 +1,7 @@
 | Attribute  | Description |
 | ------------- | ------------- |
-| pit_tag_id | A18831 |
-| acoustic_tag_id | OPI-633 |
-| scientific_name | Pollachius pollachius |
-| common_name | Pollock |
-| project | FISHINTEL |
+| Pit Tag Id | A18831 |
+| Acoustic Tag Id | OPI-633 |
+| Scientific Name | Pollachius pollachius |
+| Common Name | Pollock |
+| Project | FISHINTEL |
