--- a/static/data/A18857/A18857.md
+++ b/static/data/A18857/A18857.md
@@ -1,7 +1,7 @@
 | Attribute  | Description |
 | ------------- | ------------- |
-| pit_tag_id | A18857 |
-| acoustic_tag_id | OPI-471 |
-| scientific_name | Pollachius pollachius |
-| common_name | Pollock |
-| project | FISHINTEL |
+| Pit Tag Id | A18857 |
+| Acoustic Tag Id | OPI-471 |
+| Scientific Name | Pollachius pollachius |
+| Common Name | Pollock |
+| Project | FISHINTEL |
