--- a/static/data/A19051/A19051.md
+++ b/static/data/A19051/A19051.md
@@ -1,7 +1,7 @@
 | Attribute  | Description |
 | ------------- | ------------- |
-| pit_tag_id | A19051 |
-| acoustic_tag_id | OPI-504 |
-| scientific_name | Pollachius pollachius |
-| common_name | Pollock |
-| project | FISHINTEL |
+| Pit Tag Id | A19051 |
+| Acoustic Tag Id | OPI-504 |
+| Scientific Name | Pollachius pollachius |
+| Common Name | Pollock |
+| Project | FISHINTEL |
