--- a/static/data/A19056/A19056.md
+++ b/static/data/A19056/A19056.md
@@ -1,7 +1,7 @@
 | Attribute  | Description |
 | ------------- | ------------- |
-| pit_tag_id | A19056 |
-| acoustic_tag_id | OPI-500 |
-| scientific_name | Pollachius pollachius |
-| common_name | Pollock |
-| project | FISHINTEL |
+| Pit Tag Id | A19056 |
+| Acoustic Tag Id | OPI-500 |
+| Scientific Name | Pollachius pollachius |
+| Common Name | Pollock |
+| Project | FISHINTEL |
