--- a/static/data/A19124/A19124.md
+++ b/static/data/A19124/A19124.md
@@ -1,7 +1,7 @@
 | Attribute  | Description |
 | ------------- | ------------- |
-| pit_tag_id | A19124 |
-| acoustic_tag_id | OPI-372 |
-| scientific_name | Pollachius pollachius |
-| common_name | Pollock |
-| project | FISHINTEL |
+| Pit Tag Id | A19124 |
+| Acoustic Tag Id | OPI-372 |
+| Scientific Name | Pollachius pollachius |
+| Common Name | Pollock |
+| Project | FISHINTEL |
