Updates fish tag data format
Changes the format of fish tag data files to use more readable attribute names.

--- a/static/data/PE_A18932/PE_A18932.md
+++ b/static/data/PE_A18932/PE_A18932.md
@@ -1,7 +1,7 @@
 | Attribute  | Description |
 | ------------- | ------------- |
-| pit_tag_number | A18932 |
-| acoustic_tag_id | OPI-583 |
-| scientific_name | Dicentrarchus labrax |
-| common_name | bar européen |
-| project | FISHINTEL |
+| Pit tag number | A18932 |
+| Acoustic tag id | OPI-583 |
+| Scientific name | Dicentrarchus labrax |
+| Common name | bar européen |
+| Project | FISHINTEL |
