--- a/static/data/PE_A19243/PE_A19243.md
+++ b/static/data/PE_A19243/PE_A19243.md
@@ -1,7 +1,7 @@
 | Attribute  | Description |
 | ------------- | ------------- |
-| pit_tag_number | A19243 |
-| acoustic_tag_id | OPI-625 |
-| scientific_name | Dicentrarchus labrax |
-| common_name | bar européen |
-| project | FISHINTEL |
+| Pit tag number | A19243 |
+| Acoustic tag id | OPI-625 |
+| Scientific name | Dicentrarchus labrax |
+| Common name | bar européen |
+| Project | FISHINTEL |
