--- a/static/data/SV_A19021/SV_A19021.md
+++ b/static/data/SV_A19021/SV_A19021.md
@@ -1,7 +1,7 @@
 | Attribute  | Description |
 | ------------- | ------------- |
-| pit_tag_number | A19021 |
-| acoustic_tag_id | OPI-653 |
-| scientific_name | Dicentrarchus labrax |
-| common_name | bar européen |
-| project | FISHINTEL |
+| Pit tag number | A19021 |
+| Acoustic tag id | OPI-653 |
+| Scientific name | Dicentrarchus labrax |
+| Common name | bar européen |
+| Project | FISHINTEL |
