--- a/static/data/PE_A18922/PE_A18922.md
+++ b/static/data/PE_A18922/PE_A18922.md
@@ -1,7 +1,7 @@
 | Attribute  | Description |
 | ------------- | ------------- |
-| pit_tag_number | A18922 |
-| acoustic_tag_id | OPI-565 |
-| scientific_name | Dicentrarchus labrax |
-| common_name | bar européen |
-| project | FISHINTEL |
+| Pit tag number | A18922 |
+| Acoustic tag id | OPI-565 |
+| Scientific name | Dicentrarchus labrax |
+| Common name | bar européen |
+| Project | FISHINTEL |
