--- a/static/data/PE_A18955/PE_A18955.md
+++ b/static/data/PE_A18955/PE_A18955.md
@@ -1,7 +1,7 @@
 | Attribute  | Description |
 | ------------- | ------------- |
-| pit_tag_number | A18955 |
-| acoustic_tag_id | OPI-552 |
-| scientific_name | Dicentrarchus labrax |
-| common_name | bar européen |
-| project | FISHINTEL |
+| Pit tag number | A18955 |
+| Acoustic tag id | OPI-552 |
+| Scientific name | Dicentrarchus labrax |
+| Common name | bar européen |
+| Project | FISHINTEL |
