--- a/static/data/PE_A18956/PE_A18956.md
+++ b/static/data/PE_A18956/PE_A18956.md
@@ -1,7 +1,7 @@
 | Attribute  | Description |
 | ------------- | ------------- |
-| pit_tag_number | A18956 |
-| acoustic_tag_id | OPI-560 |
-| scientific_name | Dicentrarchus labrax |
-| common_name | bar européen |
-| project | FISHINTEL |
+| Pit tag number | A18956 |
+| Acoustic tag id | OPI-560 |
+| Scientific name | Dicentrarchus labrax |
+| Common name | bar européen |
+| Project | FISHINTEL |
