--- a/static/data/PE_A18970/PE_A18970.md
+++ b/static/data/PE_A18970/PE_A18970.md
@@ -1,7 +1,7 @@
 | Attribute  | Description |
 | ------------- | ------------- |
-| pit_tag_number | A18970 |
-| acoustic_tag_id | OPI-536 |
-| scientific_name | Dicentrarchus labrax |
-| common_name | bar européen |
-| project | FISHINTEL |
+| Pit tag number | A18970 |
+| Acoustic tag id | OPI-536 |
+| Scientific name | Dicentrarchus labrax |
+| Common name | bar européen |
+| Project | FISHINTEL |
