--- a/static/data/PE_A18978/PE_A18978.md
+++ b/static/data/PE_A18978/PE_A18978.md
@@ -1,7 +1,7 @@
 | Attribute  | Description |
 | ------------- | ------------- |
-| pit_tag_number | A18978 |
-| acoustic_tag_id | OPI-547 |
-| scientific_name | Dicentrarchus labrax |
-| common_name | bar européen |
-| project | FISHINTEL |
+| Pit tag number | A18978 |
+| Acoustic tag id | OPI-547 |
+| Scientific name | Dicentrarchus labrax |
+| Common name | bar européen |
+| Project | FISHINTEL |
