--- a/static/data/PE_A19221/PE_A19221.md
+++ b/static/data/PE_A19221/PE_A19221.md
@@ -1,7 +1,7 @@
 | Attribute  | Description |
 | ------------- | ------------- |
-| pit_tag_number | A19221 |
-| acoustic_tag_id | OPI-600 |
-| scientific_name | Dicentrarchus labrax |
-| common_name | bar européen |
-| project | FISHINTEL |
+| Pit tag number | A19221 |
+| Acoustic tag id | OPI-600 |
+| Scientific name | Dicentrarchus labrax |
+| Common name | bar européen |
+| Project | FISHINTEL |
