--- a/static/data/PE_A19228/PE_A19228.md
+++ b/static/data/PE_A19228/PE_A19228.md
@@ -1,7 +1,7 @@
 | Attribute  | Description |
 | ------------- | ------------- |
-| pit_tag_number | A19228 |
-| acoustic_tag_id | OPI-607 |
-| scientific_name | Dicentrarchus labrax |
-| common_name | bar européen |
-| project | FISHINTEL |
+| Pit tag number | A19228 |
+| Acoustic tag id | OPI-607 |
+| Scientific name | Dicentrarchus labrax |
+| Common name | bar européen |
+| Project | FISHINTEL |
