--- a/static/data/SV_A18991/SV_A18991.md
+++ b/static/data/SV_A18991/SV_A18991.md
@@ -1,7 +1,7 @@
 | Attribute  | Description |
 | ------------- | ------------- |
-| pit_tag_number | A18991 |
-| acoustic_tag_id | OPI-664 |
-| scientific_name | Dicentrarchus labrax |
-| common_name | bar européen |
-| project | FISHINTEL |
+| Pit tag number | A18991 |
+| Acoustic tag id | OPI-664 |
+| Scientific name | Dicentrarchus labrax |
+| Common name | bar européen |
+| Project | FISHINTEL |
