--- a/static/data/SV_A19030/SV_A19030.md
+++ b/static/data/SV_A19030/SV_A19030.md
@@ -1,7 +1,7 @@
 | Attribute  | Description |
 | ------------- | ------------- |
-| pit_tag_number | A19030 |
-| acoustic_tag_id | OPI-496 |
-| scientific_name | Dicentrarchus labrax |
-| common_name | bar européen |
-| project | FISHINTEL |
+| Pit tag number | A19030 |
+| Acoustic tag id | OPI-496 |
+| Scientific name | Dicentrarchus labrax |
+| Common name | bar européen |
+| Project | FISHINTEL |
